tests/baselines/reference/inheritanceStaticFuncOverridingAccessor.errors.txt
tests/cases/compiler/inheritanceStaticFuncOverridingAccessor.ts(2,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/inheritanceStaticFuncOverridingAccessor.ts(5,16): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.


==== tests/cases/compiler/inheritanceStaticFuncOverridingAccessor.ts (2 errors) ====
    class a {
        static get x() {
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            return "20";
        }
        static set x(aValue: string) {
                   ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
    
        }
    }
    
    class b extends a {
        static x() {
            return "20";
        }
    }